@@ -8,7 +8,6 @@
 #pragma std_c99
 #endif
 
-#if !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) // Bug #2874
 static inline int
 p (int *p)
 {
@@ -22,13 +21,10 @@ f (int *q)
     return 1;
   return 0;
 }
-#endif
 
 void
 testTortureExecute (void)
 {
-#if !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) // Bug #2874
   ASSERT (f ((int __code *) 0xffffffff) == 0);
   return;
-#endif
 }
