@@ -8,7 +8,6 @@
 #pragma std_c99
 #endif
 
-#if !defined(__SDCC_pdk13) && !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) // Bug #2874
 /* PR tree-optimization/47148 */
 
 static inline unsigned
@@ -31,17 +30,14 @@ foo (unsigned char x, unsigned y)
   unsigned d = bar (a, a);
   b &= ((a - d) && (a - 1)) + c;
 }
-#endif
 
 void
 testTortureExecute (void)
 {
-#if !defined(__SDCC_pdk13) && !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) // Bug #2874
   foo (1, 1);
   foo (-1, 1);
   if (b && ((unsigned char) -1) == 255)
     ASSERT (0);
   return;
-#endif
 }
 
